[package]
name = "oridion"
version = "3.0.0"
description = "Solana Oridion Galaxy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oridion"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-security-txt = "1.1.1"